--- a/BlazorUI/_Imports.razor
+++ b/BlazorUI/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using BlazorUI
 @using BlazorUI.Shared
+@using CRUD.Models 
+@using System.Net.Http.Json
+@using Newtonsoft.Json 
+
