--- a/BlazorUI/wwwroot/css/site.css
+++ b/BlazorUI/wwwroot/css/site.css
@@ -48,3 +48,25 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.loader {
+    border: 16px solid #f3f3f3; 
+    border-top: 16px solid #3498db; 
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    top:40%;
+    left:55%;
+    position:absolute;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
