--- a/BlazorUI/Pages/People.razor
+++ b/BlazorUI/Pages/People.razor
@@ -1,32 +1,35 @@
 ﻿@page "/people"
-@inherits PeopleBase 
+@inherits PeopleBase
 
-
-@if (people is null)
+@if (People.Count == 0 )
 {
-   <div class="loader"></div>
+    <div class="loader"></div>
 }
 else
 {
-        @foreach (var person in people)
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var person in People)
         {
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>@person.FirstName</td>
-                        <td>@person.LastName</td>
-                    </tr>
-                </tbody>
-            </table>
+
+            <tr>
+                <td>@person.FirstName</td>
+                <td>@person.LastName</td>
+            </tr>
+
         }
+    </tbody>
+</table>
 }
 
-@code {
-
+@if (Message is not null)
+{
+    <h1>@Message</h1>
 }
+
