--- a/BlazorUI/Shared/MainLayout.razor
+++ b/BlazorUI/Shared/MainLayout.razor
@@ -12,3 +12,7 @@
         </div>
     </div>
 </div>
+
+<BlazoredToasts Position="Blazored.Toast.Configuration.ToastPosition.BottomRight"
+                Timeout="5"/>
+                
