--- a/BlazorUI/_Imports.razor
+++ b/BlazorUI/_Imports.razor
@@ -11,4 +11,6 @@
 @using CRUD.Models 
 @using System.Net.Http.Json
 @using Newtonsoft.Json 
+@using Blazored.Toast
+@using Blazored.Toast.Services  
 
